kubernetes/platform/config/network-policy/platform/cache.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cache-default
  namespace: cache
spec:
  description: "Allow Dragonfly cache: Redis connections from labeled namespaces, replication, S3 snapshots"
  endpointSelector: { }
  ingress:
    # Redis connections from namespaces with dragonfly access label
    - fromEndpoints:
        - matchExpressions:
            - key: io.cilium.k8s.namespace.labels.access.network-policy.homelab/dragonfly
              operator: In
              values: ["true"]
      toPorts:
        - ports:
            - port: "6379"
              protocol: TCP
    # Intra-namespace (master <-> replicas)
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: cache
      toPorts:
        - ports:
            - port: "6379"
              protocol: TCP
            - port: "9999"
              protocol: TCP
    # Allow Prometheus scraping
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/name: prometheus
      toPorts:
        - ports:
            - port: "9999"
              protocol: TCP
  egress:
    # Intra-namespace (replication)
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: cache
      toPorts:
        - ports:
            - port: "6379"
              protocol: TCP
    # S3 snapshots to Garage
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: garage
      toPorts:
        - ports:
            - port: "3900"
              protocol: TCP
