kubernetes/platform/config/network-policy/platform/database.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: database-default
  namespace: database
spec:
  description: "Allow CloudNative-PG data plane: PostgreSQL connections from labeled namespaces, S3 backup, replication"
  endpointSelector: { }
  ingress:
    # Allow PostgreSQL connections from namespaces with postgres access label
    - fromEndpoints:
        - matchExpressions:
            - key: io.cilium.k8s.namespace.labels.access.network-policy.homelab/postgres
              operator: In
              values: ["true"]
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
    # Allow intra-namespace communication (primary <-> replicas)
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: database
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
            - port: "8008"
              protocol: TCP
    # Allow Prometheus scraping
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/name: prometheus
      toPorts:
        - ports:
            - port: "9187"
              protocol: TCP
  egress:
    # Allow S3 backup to Garage
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: garage
      toPorts:
        - ports:
            - port: "3900"
              protocol: TCP
    # Allow external S3 for off-cluster backups
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    # Allow intra-namespace communication (replication)
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: database
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
            - port: "8008"
              protocol: TCP
