kubernetes/platform/config/network-policy/platform/external-dns.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: external-dns-default
  namespace: external-dns
spec:
  description: "Allow ExternalDNS: egress to Cloudflare API and kube-apiserver, ingress for Prometheus scraping"
  endpointSelector: { }
  ingress:
    # Allow Prometheus scraping
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/name: prometheus
      toPorts:
        - ports:
            - port: "7979"
              protocol: TCP
    # Allow HBONE mesh traffic (Istio ambient mode)
    - fromEntities:
        - cluster
      toPorts:
        - ports:
            - port: "15008"
              protocol: TCP
  egress:
    # Allow Kubernetes API access (watches Gateway/HTTPRoute resources)
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
            - port: "443"
              protocol: TCP
    # Allow external HTTPS (Cloudflare API)
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    # Allow DNS resolution
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
