kubernetes/platform/config/network-policy/platform/external-secrets.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: external-secrets-default
  namespace: external-secrets
spec:
  description: "Allow external-secrets: AWS SSM/Secrets Manager, K8s API"
  endpointSelector: {}
  ingress:
    # Allow Prometheus scraping
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/name: prometheus
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
    # Allow webhooks from K8s API server
    - fromEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "10250"
              protocol: TCP
    # Allow intra-namespace communication
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: external-secrets
  egress:
    # Allow DNS resolution
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    # Allow Kubernetes API access
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
    # Allow AWS SSM and Secrets Manager (HTTPS)
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    # Allow intra-namespace communication
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: external-secrets
