kubernetes/platform/config/network-policy/platform/kromgo.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: kromgo-default
  namespace: kromgo
spec:
  description: "Allow Kromgo: status badge generator querying Prometheus"
  endpointSelector: { }
  ingress:
    # Allow traffic from gateways (external badge requests)
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: istio-gateway
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
    # Allow Prometheus scraping
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/name: prometheus
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
  egress:
    # Allow Prometheus queries (fetch metrics for badge generation)
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: monitoring
      toPorts:
        - ports:
            - port: "9090"
              protocol: TCP
