kubernetes/platform/config/network-policy/platform/system-upgrade.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: system-upgrade-default
  namespace: system-upgrade
spec:
  description: "Allow Tuppr: Talos/Kubernetes upgrade controller requiring Talos API access"
  endpointSelector: {}
  ingress:
    # Allow Prometheus scraping
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/name: prometheus
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
  egress:
    - toFQDNs:
        - matchName: factory.talos.dev
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "6443"
              protocol: TCP
            - port: "50000"
              protocol: TCP
    - toEntities:
        - host
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
