kubernetes/platform/config/network-policy/platform/velero.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: velero-default
  namespace: velero
spec:
  description: "Allow Velero: backup controller requiring kube-apiserver and S3 access"
  endpointSelector: { }
  ingress:
    # Allow Prometheus scraping
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/name: prometheus
      toPorts:
        - ports:
            - port: "8085"
              protocol: TCP
  egress:
    # Allow Kubernetes API access (6443 for node IPs, 443 for ClusterIP service)
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
            - port: "443"
              protocol: TCP
    # Allow external S3 access (backup storage)
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
